--- a/ssr.plist
+++ b/ssr.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.zhaohui.me/Shadowrocket-2.1.10.ipa</string>
+					<string>http://download.25pp.com/share/2017/07/03/20170703_19571_200261272732.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
