--- a/ssr.plist
+++ b/ssr.plist
@@ -2,46 +2,42 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>http://download.25pp.com/share/2017/07/03/20170703_19571_200261272732.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://www.zhaohui.me/ssr.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://www.zhaohui.me/ssr.png</string>
-				</dict>
-			</array>
-			<key>metadata</key>
-			<dict>
-				<key>bundle-identifier</key>
-				<string>com.liguangming.Shadowrocket</string>
-				<key>bundle-version</key>
-				<string>2.1.10</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>title</key>
-				<string>SSR App download</string>
-			</dict>
-		</dict>
-	</array>
+    <key>items</key>
+    <array>
+        <dict>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>https://github.com/ghostzhao/China/raw/master/Shadowrocketv2.1.21.ipa</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>display-image</string>
+                    <key>url</key>
+                    <string>https://github.com/ghostzhao/China/raw/master/ssr.png</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>full-size-image</string>
+                    <key>url</key>
+                    <string>https://github.com/ghostzhao/China/raw/master/ssr.png</string>
+                </dict>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>com.liguangming.Shadowrocket</string>
+                <key>bundle-version</key>
+                <string>2.1.21</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>title</key>
+                <string>Shadowrocket</string>
+            </dict>
+        </dict>
+    </array>
 </dict>
 </plist>
