--- a/ssr.plist
+++ b/ssr.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://github.com/ghostzhao/China/raw/master/Shadowrocket%202.1.21.ipa</string>
+                    <string>https://gitee.com/GhostZhao/China/raw/master/Shadowrocket%202.1.21.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
